--- a/extensions/refund-portal/shopify.extension.toml
+++ b/extensions/refund-portal/shopify.extension.toml
@@ -5,21 +5,23 @@
 # https://shopify.dev/docs/api/usage/versioning
 api_version = "2025-10"
 
-# First extension: Order Status Block
+# First extension: Order Status Refund
 [[extensions]]
-name = "refund-portal-block"
-handle = "refund-portal-block"
+name = "refund-menu-action"
+handle = "refund-menu-action"
 type = "ui_extension"
 uid = "3a0fc4d5-60d9-f25f-a513-3e2fd9ade3f3fa905a82"
 
 [[extensions.targeting]]
-module = "./src/OrderStatusBlock.jsx"
-target = "customer-account.order-status.block.render"
+module = "./src/OrderStatusRefund.jsx"
+target = "customer-account.order.action.menu-item.render"
 
 [extensions.capabilities]
 api_access = true
 
-# Second extension: Refund Portal Page
+
+
+# Second extension: Full-page refund portal
 [[extensions]]
 name = "refund-portal-page"
 handle = "refund-portal-page"
@@ -32,5 +34,3 @@ target = "customer-account.page.render"
 
 [extensions.capabilities]
 api_access = true
-# network_access = true
-
