--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -14,7 +14,7 @@ api_version = "2026-04"
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = "read_customers,read_orders,write_orders, customer_read_orders"
+scopes = "customer_read_orders,read_customers,write_customers,read_orders,write_orders, customer_write_customers"
 
 # Protected customer data access for Customer Account API
 use_legacy_install_flow = false
