--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -13,7 +13,7 @@ api_version = "2026-04"
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = "customer_read_orders,read_customers,write_customers,read_orders,write_orders, customer_write_customers"
+scopes = "customer_read_orders,read_customers,write_customers,read_orders,write_orders, customer_write_customers, read_returns"
 
 # Protected customer data access for Customer Account API
 use_legacy_install_flow = false
